// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperEditionModal should match snapshot when not visible 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component
    afterClose={[MockFunction]}
    visible={false}
  >
    <Component
      afterClose={[Function]}
      renderChildren={true}
      visible={false}
    />
  </Component>
</Provider>
`;

exports[`DeveloperEditionModal should match snapshot when visible 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component
    afterClose={[MockFunction]}
    visible={true}
  >
    <Component
      afterClose={[Function]}
      renderChildren={true}
      visible={true}
    />
  </Component>
</Provider>
`;
